fix: overflow issue with too many workouts, todo tab functionality for multiple days

--- a/style.css
+++ b/style.css
@@ -150,6 +150,10 @@ a {
   gap: 10px;
   background-image: linear-gradient(rgba(0, 0, 0, .0), rgba(0, 0, 0, 0));
 }
+.gridRow p {
+  margin-left: 5px;
+  background-image: linear-gradient(rgba(0, 0, 0, .0), rgba(0, 0, 0, 0));
+}
 .gridRow input {
   padding: 10px;
   border: 2px solid #C8D5BB;
@@ -279,6 +283,7 @@ a {
   display: flex;
   height: 250px;
   width: 400px;
+  overflow: hidden;
   color: #C8D5BB;
   border: 2px solid #47585C;
   border-radius: 10px;
@@ -289,6 +294,7 @@ a {
   -moz-transition: width 0.3s ease-in-out, height 0.3s ease-in-out;
   -o-transition: width 0.3s ease-in-out, height 0.3s ease-in-out;
   transition: width 0.3s ease-in-out, height 0.3s ease-in-out;
+  text-overflow: ellipsis;
 }
 .deleting {
   animation: silo-fade-away 0.3s;
@@ -300,7 +306,6 @@ a {
   display: block;
   width: 350px;
   text-align: center;
-  overflow: hidden;
   text-overflow: ellipsis;
 }
 /* Hidden at the bottom for display priority */
